# OSKernel2025-cuteCore-y

./: .gitignore  README.md  kernel-qemu  rust-toolchain.toml
easy-fs/: Cargo.toml
easy-fs/src/: bitmap.rs  layout.rs
os/: Cargo.toml  Makefile  buildfs.sh
os/.cargo/: config.toml
os/script/: riscv.mk
os/src/: console.rs  lang_items.rs  main.rs  timer.rs
os/src/drivers/: mod.rs
os/src/drivers/block/: block_dev.rs  mod.rs  virtio_blk_mmio.rs
os/src/fs/: block_cache.rs  fat32.rs  file.rs  inode.rs  mod.rs  pipe.rs  stdio.rs
os/src/fs/easyfs/: bitmap.rs  block_cache.rs  efs.rs  layout.rs  mod.rs  vfs.rs
os/src/hal/: mod.rs
os/src/hal/arch/: mod.rs
os/src/hal/arch/loongarch/: config.rs  laflex.rs  mod.rs
os/src/hal/arch/riscv/: boot.rs  config.rs  kernel_stack.rs  mod.rs  sbi.rs  sv39.rs  switch.rs  sync.rs  timer.rs
os/src/hal/arch/riscv/trap/: context.rs  mod.rs
os/src/hal/paltform/: mod.rs
os/src/hal/platform/: mod.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  pagetable.rs
os/src/sync/: condvar.rs  mod.rs  mutex.rs  semaphore.rs  up.rs
os/src/syscall/: fs.rs  mod.rs  process.rs  sync.rs  thread.rs
os/src/task/: context.rs  manager.rs  mod.rs  pid.rs  process.rs  processor.rs  signal.rs  task.rs
user/: Cargo.toml  Makefile
user/src/: lang_items.rs  lib.rs  syscall.rs
